Fiz alterações no login caixa

--- a/cadastro-style.css
+++ b/cadastro-style.css
@@ -11,6 +11,7 @@
 
  body{
     background-image: url(imagens-cadastro/mulher-cadastro.png);
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     background-color: lightgray;
