--- a/style.css
+++ b/style.css
@@ -10,14 +10,24 @@
 }
 
  body{
-    background-image: url(imagens/mulher.png);
-    background-position: center center;
+    animation: trocaImagem 30s infinite;
+    transition: background-image 10s;
+    background-position: center;
     background-size: cover;
-    background-color: lightgray;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+ }
+
+ @keyframes trocaImagem{
+   4%   {background-image: url(imagens/loira1.png); opacity: 2;}
+   6% {background-image: url(imagens/minha-modelo13.png)}
+   33%  {background-image: url(imagens/loira2.png); opacity: 2;}
+   38% {opacity: 1;}
+   66%  {background-image: url(imagens/garota.png); opacity: 2;}
+   70% {background-image: url(imagens/minha-modelo14.png);}
+   100%  {background-image: url(imagens/minha-modelo5.png);}
  }
 
  .container{
@@ -26,7 +36,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    background-color: white;
+    background-color: #ffffffd2;
     width: 500px;
     height: 600px;
  }
@@ -52,6 +62,7 @@
  }
 
  .email input{
+   background-color: #ffffff00;
     cursor: pointer;
     border-top: 0px;
     border-right: 0px;
@@ -69,6 +80,7 @@
  }
 
  .senha input{
+    background-color: #ffffff00;
     cursor: pointer;
     font-size: 1em;
     border-top: 0px;
@@ -89,7 +101,6 @@
  .botao a{
     margin-top: 110px;
     cursor: pointer;
-    color: white;
     text-decoration: none;
     font-size: 1.4em;
     font-weight: bold;
@@ -98,7 +109,7 @@
     padding: 20px;
     width: 400px;
     color: #395875;
-    background-color: white;
+    background-color: #ffffff00;
     border: 1px solid #5c95ca;
  }
 
