--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 700px) {
     .container{
         transition: 1s;
         width: 500px;
-        height: 450px;
+        height: 600px;
     }
     .logo{
        height: 100px; 
