--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 
+@media screen and (min-height: 200px) and (max-height: 600px) {
+    
+    .container{
+        height: 500px
+    }
+
+    .senha{
+        margin-top: 20px;
+
+    }
+
+    .botao{
+        margin-top: 10px;
+    }
+}
+
 @media screen and (min-width: 600px) and (max-width: 700px) {
     .container{
         transition: 1s;
@@ -10,9 +26,10 @@
        height: 100px; 
     }
     .logo img{
-        width: 180px;
+        width: 300px;
     }
     .email{
+        margin-top: 90px;
         padding: 30px;
         height: 30px;
         width: 100%;
@@ -24,7 +41,7 @@
     }
 
     .senha{
-        margin-top: 30px;
+        margin-top: 40px;
         padding: 30px;
         height: 30px;
         width: 100%;
@@ -40,14 +57,14 @@
         height: 50px;
     }
     .botao a{
-        margin-top: 140px;
+        margin-top: 160px;
         font-size: 1.1em;
-        padding: 10px;
+        padding: 20px;
         border-radius: 50px;
     }
 
     .cadastro{
-        margin-top: 110px;
+        margin-top: 130px;
         height: 30px;
     }
 }
@@ -74,8 +91,12 @@
    100%  {background-image: url(../imagens/portatil4.png); background-size: cover;}
  }
 
+ .container{
+    width: 450px;
+ }
+
  .logo{
-    margin-top: 30px;
+    margin-top: 10px;
     height: 100px;
  }
 
@@ -84,19 +105,19 @@
  }
 
  .email{
-    padding: 30px;
-    margin-bottom: 20px;
+    padding: 20px;
+    margin-bottom: 5px;
 
  }
 
  .email input{
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 20px;
  }
 
  .senha{
-    padding: 30px;
-    margin-top: 90px;
+    padding: 20px;
+    margin-top: 20px;
  }
 
  .senha input{
@@ -109,15 +130,20 @@
  }
 
  .botao a{
-    margin-top: 160px;
+    margin-top: 50px;
     border-radius: 70px;
     padding: 25px;
  }
 
  .cadastro{
-    margin-top: 100px;
+    margin-top: 25px;
     margin-bottom: 0px;
  }
 
 
 }
+
+/* @media screen and (min-width: 624px) and (max-width: 724px) {
+    .email{
+        margin-bottom: 100px;
+    } */
